--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.12",
+    "heroku": "^7.18.3",
     "method-override": "^3.0.0",
     "mysql": "^2.16.0"
   }
