--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "handlebars": "^4.0.12",
     "heroku": "^7.18.3",
     "method-override": "^3.0.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.3"
   }
 }
